# itc-2024

./: .env  .env.example  LICENCE  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .gitignore  __init__.py  pyproject.toml
backend/src/: Dockerfile  main.py
backend/src/mixins/: token_mixin.py
backend/src/repositories/: colelctions.py  mongo_context.py  pg_context.py
backend/src/repositories/cruds/: __init__.py  base_crud.py  event_crud.py  road_crud.py  stage_crud.py  user_crud.py
backend/src/repositories/models/: user.py
backend/src/routers/: api.py
backend/src/routers/v1/: event_router.py  road_router.py  router.py  stage_router.py
backend/src/routers/v1/auth/: router.py
backend/src/routers/v1/roads/: router.py
backend/src/schemas/: auth.py  auth_api.py  event.py  road.py  stage.py  user.py
backend/src/services/auth/: handler.py  utils.py
backend/src/shared/: config.py  constants.py
front/: Dockerfile
front/src/pages/: Map.vue
ml/: Dockerfile  README.md  main.py  pyproject.toml
models/: db.js  test.js
