[tool.poetry]
name = "ocr-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
opencv-python = "^4.10.0.84"
inference-sdk = "^0.19.0"
pytesseract = "^0.3.13"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
